Fix spacing and item aligment

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  text-align: center;
   header {
     margin: 40px;
     display: flex;
@@ -32,6 +33,7 @@ main {
     h3 {
       padding: 20px;
       font-size: rem(24);
+      margin-bottom: 10px;
     }
     label {
       padding: 20px;
@@ -52,6 +54,8 @@ main {
         font-size: rem(16);
       }
       ol {
+        display: flex;
+        justify-content: center;
         li {
           padding-left: 20px;
           padding-bottom: 10px;
@@ -65,6 +69,7 @@ main {
     h3 {
       padding: 20px;
       font-size: rem(24);
+      margin-bottom: 10px;
     }
     label {
       padding: 20px;
@@ -98,6 +103,7 @@ main {
     h3 {
       padding: 20px;
       font-size: rem(24);
+      margin-bottom: 10px;
     }
     label {
       padding: 20px;
